se soluciono errores